update link mac

--- a/detail/apple/mac_MPXV2ZP.html
+++ b/detail/apple/mac_MPXV2ZP.html
@@ -724,7 +724,7 @@
 		</div>
 		<!-- /SECTION -->
 
-		<!-- Section -->
+	<!-- Section -->
 		<div class="section">
 			<!-- container -->
 			<div class="container">
@@ -743,13 +743,10 @@
 						<div class="product">
 							<div class="product-img">
 								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/a/s/asus_ux430un_1_1.jpg" height="120px" width="100px" alt="">
-								<div class="product-label">
-									<span class="sale">-3%</span>
-								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Ultrabook</p>
-								<h3 class="product-name"><a href="#">Laptop Asus UX430UN-<br>GV097T</a></h3>
+								<h3 class="product-name"><a href="../asus/Asus UX430UN-GV097T.html">Laptop Asus UX430UN-<br>GV097T</a></h3>
 								<h4 class="product-price">26.990.000 ₫
 								<div class="product-rating">
 								</div>
@@ -764,13 +761,10 @@
 						<div class="product">
 							<div class="product-img">
 								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14548/2017/11/18/14548.png" height="120px" width="100px" alt="">
-								<div class="product-label">
-									<span class="sale">-3%</span>
-								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Ultrabook</p>
-								<h3 class="product-name"><a href="#">Laptop Dell XPS13 9360-99H103 </a></h3>
+								<h3 class="product-name"><a href="../dell/Dell XPS13 9360-99H103.html">Laptop Dell XPS13 9360-99H103 </a></h3>
 								<h4 class="product-price">46.090.000 ₫
 								</del></h4>
 								<div class="product-rating">
@@ -789,7 +783,7 @@
 							</div>
 							<div class="product-body">
 								<p class="product-category">Ultrabook</p>
-								<h3 class="product-name"><a href="#">Laptop Dell XPS13 9365-K7DWW2</a></h3>
+								<h3 class="product-name"><a href="../dell/Dell XPS13 9365-K7DWW2.html">Laptop Dell XPS13 9365-K7DWW2</a></h3>
 								<h4 class="product-price">54.490.000 ₫</h4>
 								<div class="product-rating">
 								</div>
@@ -812,7 +806,7 @@
 							</div>
 							<div class="product-body">
 								<p class="product-category">Ultrabook</p>
-								<h3 class="product-name"><a href="#">Laptop MacBook Air MQD32ZP</a></h3>
+								<h3 class="product-name"><a href="mac_MQD32ZP.html">Laptop MacBook Air MQD32ZP</a></h3>
 								<h4 class="product-price">22.490.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
@@ -835,12 +829,12 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_12877/2017/08/15/12877.png" width="100px" height="120px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_15282_17920/2017/12/09/15282_1512794757-1.jpg" width="100px" height="120px" alt="">
 							</div>
 							<div class="product-body">
 								<p class="product-category">Ultrabook</p>
-								<h3 class="product-name"><a href="#">Laptop MacBook 12" MNYM2SA</a></h3>
-								<h4 class="product-price">33.450.000 ₫ </h4>
+								<h3 class="product-name"><a href="mac_MPTT2SA.html">Laptop MacBook 12" MPTT2SA</a></h3>
+								<h4 class="product-price">71.500.000 ₫ </h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -901,12 +895,12 @@
 				<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/image/9df78eab33525d08d6e5fb8d27136e95/uploads/product/p_14474/2017/11/13/14474.png" width="100px" height="140px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_15282_17920/2017/12/09/15282_1512794757-1.jpg" width="100px" height="140px" alt="">
 							</div>
 							<div class="product-body">
-								<p class="product-category">Laptop MSI</p>
-								<h3 class="product-name"><a href="#">Laptop MSI-IS GV62 7RD-1883XVN</a></h3>
-								<h4 class="product-price">21.990.000 ₫</h4>
+								<p class="product-category">Macbook</p>
+								<h3 class="product-name"><a href="mac_MPTT2SA.html">Laptop MacBook 15" MPTT2SA</a></h3>
+								<h4 class="product-price">71.500.000 ₫</h4>
 								<div class="product-rating">
 								</div>
 							</div>
@@ -921,15 +915,15 @@
 					<div class="col-md-2 col-xs-6">
 						<div class="product">
 							<div class="product-img">
-								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_14474_17090/2017/11/13/14474_1510540827-3.jpg" width="100px" height="140px" alt="">
+								<img src="https://phongvu.vn/media/catalog/product/cache/23/thumbnail/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_12886_15372/2017/08/16/12886_1502867936-2.jpg" width="100px" height="140px" alt="">
 								<div class="product-label">
 									<span class="new">NEW</span>
 								</div>
 							</div>
 							<div class="product-body">
 								<p class="product-category">Macbook</p>
-								<h3 class="product-name"><a href="mac_MPTT2SA.html">Laptop MacBook 15" MPTT2SA </a></h3>
-								<h4 class="product-price">71.500.000 ₫</h4>
+								<h3 class="product-name"><a href="mac_MPXQ2SA.html">Laptop MacBook 15" MPXQ2SA </a></h3>
+								<h4 class="product-price">33.590.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -955,7 +949,7 @@
 							</div>
 							<div class="product-body">
 								<p class="product-category">Macbook</p>
-								<h3 class="product-name"><a href="#">Laptop MacBook 13.3" MPXW2ZP<br>-1424XVN </a></h3>
+								<h3 class="product-name"><a href="mac_MPXW2ZP.html">Laptop MacBook 13.3" MPXW2ZP-1424 </a></h3>
 								<h4 class="product-price">52.390.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
@@ -983,7 +977,7 @@
 							</div>
 							<div class="product-body">
 								<p class="product-category">Macbook</p>
-								<h3 class="product-name"><a href="#">Laptop MacBook 13.3" MPXV2ZP</a></h3>
+								<h3 class="product-name"><a href="mac_MPXV2ZP.html">Laptop MacBook 13.3" MPXV2ZP</a></h3>
 								<h4 class="product-price">45.990.000 ₫</h4>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
