--- a/login/SingIn.html
+++ b/login/SingIn.html
@@ -187,14 +187,28 @@
 
 		<!-- NAVIGATION -->
 		<nav id="navigation">
-			<!-- container -->
-			<div class="container">
-				<!-- responsive-nav -->
-				
-				<!-- /responsive-nav -->
-			</div>
-			<!-- /container -->
-		</nav>
+	<!-- container -->
+	<div class="container">
+		<!-- responsive-nav -->
+		<div id="responsive-nav">
+			<!-- NAV -->
+			<ul class="main-nav nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Laptop Gaming</a></li>
+				<li><a href="#">Laptop Văn phòng</a></li>
+				<li><a href="#">Laptop Doanh nhân</a></li>
+				<li><a href="#">Ultra Book</a></li>
+				<li><a href="#">DELL</a></li>
+				<li><a href="#">ASUS</a></li>
+				<li><a href="#">MSI</a></li>
+				<li><a href="#">APPLE</a></li>
+			</ul>
+			<!-- /NAV -->
+		</div>
+		<!-- /responsive-nav -->
+	</div>
+	<!-- /container -->
+</nav>
 		<!-- /NAVIGATION -->
 
 		<!-- BREADCRUMB -->
