--- a/login/SignUp.html
+++ b/login/SignUp.html
@@ -77,13 +77,14 @@
 						<form>
 							<select class="input-select">
 								<option value="0">Tất cả</option>
-								<option value="1">Gaming</option>
-								<option value="2">Văn phòng</option>
-								<option value="3">Doanh nhân</option>
-								<option value="4">Dell</option>
-								<option value="5">Asus</option>
-								<option value="6">MSI</option>
-								<option value="7">Apple</option>
+									<option value="1">Gaming</option>
+									<option value="2">Văn phòng</option>
+									<option value="3">Doanh nhân</option>
+									<option value="4">Ultra book</option>
+									<option value="5">Dell</option>
+									<option value="6">Asus</option>
+									<option value="7">MSI</option>
+									<option value="8">Apple</option>
 							</select>
 							<input class="input" placeholder="Search here">
 							<button class="search-btn">Search</button>
@@ -166,18 +167,32 @@
 	</div>
 	<!-- /MAIN HEADER -->
 </header>
-		<!-- /HEADER -->
+<!-- /HEADER -->
 
-		<!-- NAVIGATION -->
-		<nav id="navigation">
-			<!-- container -->
-			<div class="container">
-				<!-- responsive-nav -->
-				
-				<!-- /responsive-nav -->
-			</div>
-			<!-- /container -->
-		</nav>
+<!-- NAVIGATION -->
+<nav id="navigation">
+	<!-- container -->
+	<div class="container">
+		<!-- responsive-nav -->
+		<div id="responsive-nav">
+			<!-- NAV -->
+			<ul class="main-nav nav navbar-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Laptop Gaming</a></li>
+				<li><a href="#">Laptop Văn phòng</a></li>
+				<li><a href="#">Laptop Doanh nhân</a></li>
+				<li><a href="#">Ultra Book</a></li>
+				<li><a href="#">DELL</a></li>
+				<li><a href="#">ASUS</a></li>
+				<li><a href="#">MSI</a></li>
+				<li><a href="#">APPLE</a></li>
+			</ul>
+			<!-- /NAV -->
+		</div>
+		<!-- /responsive-nav -->
+	</div>
+	<!-- /container -->
+</nav>
 		<!-- /NAVIGATION -->
 
 		<!-- BREADCRUMB -->
