update link product

--- a/detail/apple/mac_MPXQ2SA.html
+++ b/detail/apple/mac_MPXQ2SA.html
@@ -213,9 +213,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul class="breadcrumb-tree">
-							<li><a href="#">Trang chủ</a></li>
-							<li><a href="#">Laptop</a></li>
-							<li><a href="#">MAC</a></li>
+							<li><a href="../../index.html">Trang chủ</a></li>
+							<li><a href="../../producer/MacBook.html">MAC</a></li>
 							<li class="active">Laptop MacBook 13.3" MPXQ2SA</li>
 						</ul>
 					</div>
