--- a/detail/msi/msi_GP62M.html
+++ b/detail/msi/msi_GP62M.html
@@ -73,8 +73,8 @@
 				<!-- LOGO -->
 				<div class="col-md-3">
 					<div class="header-logo">
-						<a href="#" class="logo">
-							<img width = "80%" src="./img/logo.png" alt="">
+						<a href="../../index.html" class="logo">
+							<img width = "80%" src="../../img/logo.png" alt="">
 						</a>
 					</div>
 				</div>
@@ -185,11 +185,15 @@
 		<div id="responsive-nav">
 			<!-- NAV -->
 			<ul class="main-nav nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">DELL</a></li>
-				<li><a href="#">ASUS</a></li>
-				<li><a href="#">ACER</a></li>
-				<li><a href="#">APPLE</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+				<li><a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+				<li><a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+				<li><a href="../../type/Laptop_UltraBook.html">Ultra Book</a></li>
+				<li><a href="../../producer/Laptop_Dell.html">DELL</a></li>
+				<li><a href="../../producer/Laptop_Asus.html">ASUS</a></li>
+				<li><a href="../../producer/Laptop_MSI.html">MSI</a></li>
+				<li><a href="../../producer/Laptop_MacBook.html">APPLE</a></li>
 			</ul>
 			<!-- /NAV -->
 		</div>
@@ -213,9 +217,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul class="breadcrumb-tree">
-							<li><a href="#">Trang chủ</a></li>
-							<li><a href="#">Laptop</a></li>
-							<li><a href="#">MSI</a></li>
+							<li><a href="../../index.html">Trang chủ</a></li>
+							<li><a href="../../producer/Laptop_MSI.html">MSI</a></li>
 							<li class="active">GP62M 7REX-1884XVN (I7-7700HQ)</li>
 						</ul>
 					</div>
