--- a/producer/Laptop_MacBook.html
+++ b/producer/Laptop_MacBook.html
@@ -177,15 +177,15 @@
 		<div id="responsive-nav">
 			<!-- NAV -->
 			<ul class="main-nav nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Laptop Gaming</a></li>
-				<li><a href="#">Laptop Văn phòng</a></li>
-				<li><a href="#">Laptop Doanh nhân</a></li>
-				<li><a href="#">Ultra Book</a></li>
-				<li><a href="#">DELL</a></li>
-				<li><a href="#">ASUS</a></li>
-				<li><a href="#">MSI</a></li>
-				<li><a href="#">APPLE</a></li>
+				<li class="active"><a href="../../index.html">Home</a></li>
+				<li><a href="../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+				<li><a href="../type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+				<li><a href="../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+				<li><a href="../type/Laptop_UltraBook.html">Ultra Book</a></li>
+				<li><a href="../producer/Laptop_Dell.html">DELL</a></li>
+				<li><a href="../producer/Laptop_Asus.html">ASUS</a></li>
+				<li><a href="../producer/Laptop_MSI.html">MSI</a></li>
+				<li><a href="../producer/Laptop_MacBook.html">APPLE</a></li>
 			</ul>
 			<!-- /NAV -->
 		</div>
