--- a/login/SignUp.html
+++ b/login/SignUp.html
@@ -219,7 +219,7 @@
 				    <input type="submit" name="signup_submit" value="Sign up" />
 				  </div>
 				  
-				  <div class="right">
+				  <div class="rightsignup">
 				    <span class="loginwith">Login in with</span>
 				    
 				    <button class="social-signin facebook">Log in with facebook</button>
