--- a/detail/asus/Asus GL503VM-GZ219T.html
+++ b/detail/asus/Asus GL503VM-GZ219T.html
@@ -41,12 +41,12 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-						<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> laptopck@cklaptop.com.vn</a></li>
+						<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, TpHCM</a></li>
 					</ul>
 					<ul class="header-links pull-right">
-						<li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
+						<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
 						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
 					</ul>
 				</div>
@@ -74,11 +74,14 @@
 							<div class="header-search">
 								<form>
 									<select class="input-select">
-										<option value="0">All Categories</option>
-										<option value="1">Laptop Gaming</option>
-										<option value="1">Laptop Doanh Nhân</option>
-										<option value="2">Laptop Văn Phòng</option>
-										<option value="3">Ultrabook</option>
+										<option value="0">Tất cả</option>
+										<option value="1">Gaming</option>
+										<option value="2">Văn phòng</option>
+										<option value="3">Doanh nhân</option>
+										<option value="4">Dell</option>
+										<option value="5">Asus</option>
+										<option value="6">MSI</option>
+										<option value="7">Apple</option>
 									</select>
 									<input class="input" placeholder="Search here">
 									<button class="search-btn">Search</button>
@@ -90,6 +93,15 @@
 						<!-- ACCOUNT -->
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
+								<!-- Wishlist -->
+								<div>
+									<a href="#">
+										<i class="fa fa-heart-o"></i>
+										<span>Your Wishlist</span>
+										<div class="qty">2</div>
+									</a>
+								</div>
+								<!-- /Wishlist -->
 								<!-- Cart -->
 								<div class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
@@ -151,11 +163,15 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">DELL</a></li>
-						<li><a href="#">ASUS</a></li>
-						<li><a href="#">MSI</a></li>
-						<li><a href="#">APPLE</a></li>
+						<li class="active"><a href="../../index.html">Home</a></li>
+						<li><a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+						<li><a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+						<li><a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+						<li><a href="../../type/Laptop_UltraBook.html">Ultra Book</a></li>
+						<li><a href="../../producer/Laptop_Dell.html">DELL</a></li>
+						<li><a href="../../producer/Laptop_Asus.html">ASUS</a></li>
+						<li><a href="../../producer/Laptop_MSI.html">MSI</a></li>
+						<li><a href="../../producer/Laptop_MacBook.html">APPLE</a></li>
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -174,7 +190,6 @@
 					<div class="col-md-12">
 						<ul class="breadcrumb-tree">
 							<li><a href="#">Trang chủ</a></li>
-							<li><a href="#">Laptop</a></li>
 							<li><a href="#">ASUS</a></li>
 							<li class="active">ASUS GL503VM-GZ219T (I7-7700HQ) (Đen)</li>
 						</ul>
@@ -909,42 +924,7 @@
 			</div>
 			<!-- /container -->
 		</div>
-		<!-- /Section -->
-		<!-- NEWSLETTER -->
-		<div id="newsletter" class="section">
-			<!-- container -->
-			<div class="container">
-				<!-- row -->
-				<div class="row">
-					<div class="col-md-12">
-						<div class="newsletter">
-							<p>Sign Up for the <strong>NEWSLETTER</strong></p>
-							<form>
-								<input class="input" type="email" placeholder="Enter Your Email">
-								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribe</button>
-							</form>
-							<ul class="newsletter-follow">
-								<li>
-									<a href="#"><i class="fa fa-facebook"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-instagram"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-pinterest"></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- /row -->
-			</div>
-			<!-- /container -->
-		</div>
-		<!-- /NEWSLETTER -->	
+		<!-- /Section -->	
 
 		<!-- FOOTER -->
 		<footer id="footer">
@@ -956,21 +936,20 @@
 					<div class="row">
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
-								<h3 class="footer-title">About Us</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+								<h3 class="footer-title">Về chúng tôi</h3>
+								<p>Môn Lập trình ứng dụng Web - khoa Công nghệ Thông tin, trường Đại học Khoa học Tự nhiên - Đại học Quốc gia Tp. Hồ Chí Minh</p>
 								<ul class="footer-links">
-									<li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-									<li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-									<li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+									<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
+									<li><a href="#"><i class="fa fa-envelope-o"></i> laptopck@cklaptop.com.vn</a></li>
+									<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, Tp. HCM</a></li>
 								</ul>
 							</div>
 						</div>
 
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
-								<h3 class="footer-title">Categories</h3>
+								<h3 class="footer-title">Các thương hiệu được phân phối</h3>
 								<ul class="footer-links">
-									<li class="active"><a href="#">Home</a></li>
 									<li><a href="#">DELL</a></li>
 									<li><a href="#">ASUS</a></li>
 									<li><a href="#">MSI</a></li>
@@ -983,26 +962,23 @@
 
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
-								<h3 class="footer-title">Information</h3>
+								<h3 class="footer-title">Thông tin thành viên</h3>
 								<ul class="footer-links">
-									<li><a href="#">About Us</a></li>
-									<li><a href="#">Contact Us</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-									<li><a href="#">Orders and Returns</a></li>
-									<li><a href="#">Terms & Conditions</a></li>
+									<li>1512576 - Nguyễn Quang Tính</li>
+									<li>1512609 - Hoàng Quốc Trung</li>
+									<li>1512613 - Nguyễn Chí Trung</li>
+									<li>1512651 - Bùi Châu Minh Tùng</li>
 								</ul>
 							</div>
 						</div>
 
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
-								<h3 class="footer-title">Service</h3>
+								<h3 class="footer-title">Dịch vụ</h3>
 								<ul class="footer-links">
-									<li><a href="#">My Account</a></li>
-									<li><a href="#">View Cart</a></li>
-									<li><a href="#">Wishlist</a></li>
-									<li><a href="#">Track My Order</a></li>
-									<li><a href="#">Help</a></li>
+									<li><a href="#">Tài khoản của tôi</a></li>
+									<li><a href="#">Xem giỏ hàng</a></li>
+									<li><a href="#">Về đầu trang</a></li>
 								</ul>
 							</div>
 						</div>
@@ -1029,7 +1005,7 @@
 							</ul>
 							<span class="copyright">
 								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by BCMT
 							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</span>
 						</div>
