--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 	<link type="text/css" rel="stylesheet" href="css/style1.css">
+	<link type="text/css" rel="stylesheet" href="css/style-dropdown.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
 
@@ -42,7 +43,7 @@
 			<div class="container">
 				<ul class="header-links pull-left">
 					<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
-					<li><a href="#"><i class="fas fa-at"></i> laptopck@cklaptop.com.vn</a></li>
+					<li><a href="#"><i class="far fa-envelope"></i> laptopck@cklaptop.com.vn</a></li>
 					<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, TpHCM</a></li>
 				</ul>
 				<ul class="header-links pull-right">
@@ -78,10 +79,11 @@
 									<option value="1">Gaming</option>
 									<option value="2">Văn phòng</option>
 									<option value="3">Doanh nhân</option>
-									<option value="4">Dell</option>
-									<option value="5">Asus</option>
-									<option value="6">MSI</option>
-									<option value="7">Apple</option>
+									<option value="4">Ultrabook</option>
+									<option value="5">Dell</option>
+									<option value="6">Asus</option>
+									<option value="7">MSI</option>
+									<option value="8">Apple</option>
 								</select>
 								<input class="input" placeholder="Search here">
 								<button class="search-btn">Search</button>
@@ -174,11 +176,24 @@
 			<div id="responsive-nav">
 				<!-- NAV -->
 				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">DELL</a></li>
-					<li><a href="#">ASUS</a></li>
-					<li><a href="#">MSI</a></li>
-					<li><a href="#">APPLE</a></li>
+					<li class="active"><a href="#"><i class="fas fa-home"></i> Home</a></li>
+					
+					<li class="dropdown"><a href="#">Xem theo loại sản phẩm</a>
+					 <div class="dropdown-content">
+					      <a href="#">Laptop Gaming</a>
+					      <a href="#">Laptop Văn phòng</a>
+					      <a href="#">Laptop Doanh nhân</a>
+					      <a href="#">Laptop Ultrabook</a>
+				    </div>
+				    </li>
+					<li class="dropdown"><a href="#">Xem theo nhà sản xuất</a>
+					 <div class="dropdown-content">
+					      <a href="#">DELL</a>
+					      <a href="#">ASUS</a>
+					      <a href="#">MSI</a>
+					      <a href="#">APPLE</a>
+				    </div>
+				    </li>
 				</ul>
 				<!-- /NAV -->
 			</div>
@@ -188,39 +203,41 @@
 	</nav>
 	<!-- /NAVIGATION -->
 
+	<!-- main carousel -->
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+		</ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="cover1.png" alt="Los Angeles" style="width:100%;">
-      </div>
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+			<div class="item active">
+				<img width="100%" height="auto" src="img/cover1.png" alt="Los Angeles">
+			</div>
 
-      <div class="item">
-        <img src="cover2.png" alt="Chicago" style="width:100%;">
-      </div>
-    
-      <div class="item">
-        <img src="cover1.png" alt="New york" style="width:100%;">
-      </div>
-    </div>
+			<div class="item">
+				<img width="100%" height="auto" src="img/cover2.png" alt="Chicago">
+			</div>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+			<div class="item">
+				<img width="100%" height="auto" src="img/cover1.png" alt="New York">
+			</div>
+		</div>
+
+		<!-- Left and right controls -->
+		<!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			<i class="fas fa-angle-left carousel-pos"></i>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right carousel-control" href="#myCarousel" data-slide="next">
+			<i class="fas fa-angle-right carousel-pos"></i>
+			<span class="sr-only">Next</span>
+		</a> -->
+	</div>
+	<!-- end of carousel --> 
 </div>
 
 
@@ -1350,7 +1367,7 @@
 								<p>Môn Lập trình ứng dụng Web - khoa Công nghệ Thông tin, trường Đại học Khoa học Tự nhiên - Đại học Quốc gia Tp. Hồ Chí Minh</p>
 								<ul class="footer-links">
 									<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
-									<li><a href="#"><i class="fa fa-envelope-o"></i> laptopck@cklaptop.com.vn</a></li>
+									<li><a href="#"><i class="far fa-envelope"></i> laptopck@cklaptop.com.vn</a></li>
 									<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, Tp. HCM</a></li>
 								</ul>
 							</div>
