--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
-					<li><a href="#"><i class="far fa-user"></i>My Account</a></li>
+					<li><a href="#"><i class="far fa-user"></i>Đăng nhập</a></li>
+					<li><a href="#"><i class="fas fa-plus"></i>Đăng ký</a></li>
 				</ul>
 			</div>
 		</div>
@@ -85,8 +86,8 @@
 									<option value="7">MSI</option>
 									<option value="8">Apple</option>
 								</select>
-								<input class="input" placeholder="Search here">
-								<button class="search-btn">Search</button>
+								<input class="input" placeholder="Bạn đang tìm gì?">
+								<button class="search-btn">Tìm kiếm</button>
 							</form>
 						</div>
 					</div>
@@ -99,8 +100,8 @@
 							<div>
 								<a href="#">
 									<i class="far fa-heart"></i>
-									<span>Your Wishlist</span>
-									<div class="qty">2</div>
+									<span>Yêu thích</span>
+									<div class="qty">0</div>
 								</a>
 							</div>
 							<!-- /Wishlist -->
@@ -109,8 +110,8 @@
 							<div class="dropdown">
 								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 									<i class="fa fa-shopping-cart"></i>
-									<span>Your Cart</span>
-									<div class="qty">3</div>
+									<span>Giỏ hàng</span>
+									<div class="qty">0</div>
 								</a>
 								<div class="cart-dropdown">
 									<div class="cart-list">
@@ -176,9 +177,9 @@
 			<div id="responsive-nav">
 				<!-- NAV -->
 				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="#"><i class="fas fa-home"></i> Home</a></li>
+					<li class="active"><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
 					
-					<li class="dropdown"><a href="#">Xem theo loại sản phẩm</a>
+					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
 					 <div class="dropdown-content">
 					      <a href="#">Laptop Gaming</a>
 					      <a href="#">Laptop Văn phòng</a>
@@ -186,7 +187,7 @@
 					      <a href="#">Laptop Ultrabook</a>
 				    </div>
 				    </li>
-					<li class="dropdown"><a href="#">Xem theo nhà sản xuất</a>
+					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
 					 <div class="dropdown-content">
 					      <a href="#">DELL</a>
 					      <a href="#">ASUS</a>
