--- a/login/SignUp.html
+++ b/login/SignUp.html
@@ -216,7 +216,7 @@
 				    	<div class="g-recaptcha" data-sitekey="6LfPNVUUAAAAAGKNsEeXiuT2O_r_W73iMQ2Baw6p"></div>
 				    </form>
 				    
-				    <input type="submit" name="signup_submit" value="Sign up" />
+				    <a href="#" class="primary-btn order-submit">Sign up</a>
 				  </div>
 				  
 				  <div class="rightsignup">
