--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 									<span>Giỏ hàng</span>
 									<div class="qty">0</div>
 								</a>
-								<div class="cart-dropdown">
+								<!-- <div class="cart-dropdown">
 									<div class="cart-list">
 										<div class="product-widget">
 											<div class="product-img">
@@ -145,7 +145,7 @@
 										<a href="#">View Cart</a>
 										<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<!-- /Cart -->
 
@@ -619,7 +619,7 @@
 							<div class="products-tabs">
 								<!-- tab -->
 								<div id="tab1" class="tab-pane active">
-									<div class="products-slick" data-nav="#slick-nav-1">
+									<div class="products-slick" data-nav="#slick-nav-2">
 										
 										<!-- Laptop Asus UX430UN-GV097T (I7-8550U) -->
 										<!-- product -->
@@ -936,7 +936,7 @@
 										</div>
 										<!-- /product -->
 									</div>
-									<div id="slick-nav-1" class="products-slick-nav"></div>
+									<div id="slick-nav-2" class="products-slick-nav"></div>
 								</div>
 								<!-- /tab -->
 							</div>
@@ -979,7 +979,7 @@
 							<div class="products-tabs">
 								<!-- tab -->
 								<div id="tab2" class="tab-pane fade in active">
-									<div class="products-slick" data-nav="#slick-nav-2">
+									<div class="products-slick" data-nav="#slick-nav-3">
 										<!-- Laptop MSI GP72M 7REX-1216XVN (I7-7700HQ) -->
 										<!-- product -->
 										<div class="product">
@@ -1302,7 +1302,7 @@
 										</div>
 										<!-- /product -->
 									</div>
-									<div id="slick-nav-2" class="products-slick-nav">
+									<div id="slick-nav-3" class="products-slick-nav">
 
 									</div>
 								</div>
