--- a/admin/index.html
+++ b/admin/index.html
@@ -43,10 +43,10 @@
                     </li>
                     <h3 class="menu-title">Quản lý sản phẩm</h3><!-- /.menu-title -->
                     <li>
-                        <a href="widgets.html"> <i class="menu-icon fa fa-book"></i>Loại sản phẩm </a>
+                        <a href="loaisp.html"> <i class="menu-icon fa fa-book"></i>Loại sản phẩm </a>
                     </li>
                    	<li>
-                        <a href="widgets.html"> <i class="menu-icon fa fa-book"></i>Nhà sản xuất </a>
+                        <a href="nhasanxuat.html"> <i class="menu-icon fa fa-book"></i>Nhà sản xuất </a>
                     </li>
 
                     <h3 class="menu-title">Đơn hàng</h3><!-- /.menu-title -->
