--- a/index.html
+++ b/index.html
@@ -1397,21 +1397,6 @@
 								</ul>
 							</div>
 						</div>
-
-						<div class="col-md-3 col-xs-6">
-							<div class="footer">
-								<h3 class="footer-title">Các thương hiệu được phân phối</h3>
-								<ul class="footer-links">
-									<li><a href="./producer/Laptop_Dell.html">DELL</a></li>
-									<li><a href="./producer/Laptop_Asus.html">ASUS</a></li>
-									<li><a href="./producer/Laptop_MSI.html">MSI</a></li>
-									<li><a href="./producer/Laptop_MacBook.html">APPLE</a></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="clearfix visible-xs"></div>
-
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
 								<h3 class="footer-title">Thông tin thành viên</h3>
@@ -1423,6 +1408,26 @@
 								</ul>
 							</div>
 						</div>
+						
+						<div class="clearfix visible-xs"></div>
+
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Tìm kiếm nhanh</h3>
+								<ul class="footer-links">
+									<li><a href="./producer/Laptop_Dell.html">DELL</a></li>
+									<li><a href="./producer/Laptop_Asus.html">ASUS</a></li>
+									<li><a href="./producer/Laptop_MSI.html">MSI</a></li>
+									<li><a href="./producer/Laptop_MacBook.html">APPLE</a></li>
+									<li><a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+									<li><a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+									<li><a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+									<li><a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a></li>
+								</ul>
+							</div>
+						</div>
+
+						
 
 						<div class="col-md-3 col-xs-6">
 							<div class="footer">
