--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@
 									<li><a href="#">Tài khoản của tôi</a></li>
 									<li><a href="#">Xem giỏ hàng</a></li>
 									<li><a href="#">Về đầu trang</a></li>
-									<li><a href="#">Đến trang hệ thống</a></li>
+									<li><a href="./admin/index.html">Đến trang hệ thống</a></li>
 								</ul>
 							</div>
 						</div>
