--- a/detail/msi/msi_GP62MVR.html
+++ b/detail/msi/msi_GP62MVR.html
@@ -25,6 +25,9 @@
 
  		<!-- Custom stlylesheet -->
  		<link type="text/css" rel="stylesheet" href="../../css/style.css"/>
+ 		<link type="text/css" rel="stylesheet" href="../../css/style1.css">
+	<link type="text/css" rel="stylesheet" href="../../css/style-dropdown.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,164 +48,173 @@
     </head>
 	<body>
 		<!-- HEADER -->
-<header>
-	<!-- TOP HEADER -->
-	<div id="top-header">
-		<div class="container">
-			<ul class="header-links pull-left">
-				<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
-				<li><a href="#"><i class="fa fa-envelope-o"></i> laptopck@cklaptop.com.vn</a></li>
-				<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, TpHCM</a></li>
-			</ul>
-			<ul class="header-links pull-right">
-				<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
-				<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
-			</ul>
-		</div>
-	</div>
-	<!-- /TOP HEADER -->
-
-	<!-- MAIN HEADER -->
-	<div id="header">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<!-- LOGO -->
-				<div class="col-md-3">
-					<div class="header-logo">
-						<a href="#" class="logo">
-							<img width = "80%" src="./img/logo.png" alt="">
-						</a>
-					</div>
-				</div>
-				<!-- /LOGO -->
-
-				<!-- SEARCH BAR -->
-				<div class="col-md-6">
-					<div class="header-search">
-						<form>
-							<select class="input-select">
-								<option value="0">Tất cả</option>
-								<option value="1">Gaming</option>
-								<option value="2">Văn phòng</option>
-								<option value="3">Doanh nhân</option>
-								<option value="4">Dell</option>
-								<option value="5">Asus</option>
-								<option value="6">MSI</option>
-								<option value="7">Apple</option>
-							</select>
-							<input class="input" placeholder="Search here">
-							<button class="search-btn">Search</button>
-						</form>
-					</div>
-				</div>
-				<!-- /SEARCH BAR -->
-
-				<!-- ACCOUNT -->
-				<div class="col-md-3 clearfix">
-					<div class="header-ctn">
-						<!-- Wishlist -->
-						<div>
-							<a href="#">
-								<i class="fa fa-heart-o"></i>
-								<span>Your Wishlist</span>
-								<div class="qty">2</div>
-							</a>
-						</div>
-						<!-- /Wishlist -->
-
-						<!-- Cart -->
-						<div class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-								<i class="fa fa-shopping-cart"></i>
-								<span>Your Cart</span>
-								<div class="qty">3</div>
-							</a>
-							<div class="cart-dropdown">
-								<div class="cart-list">
-									<div class="product-widget">
-										<div class="product-img">
-											<img src="./img/product01.png" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-name"><a href="#">product name goes here</a></h3>
-											<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-										</div>
-										<button class="delete"><i class="fa fa-close"></i></button>
-									</div>
-
-									<div class="product-widget">
-										<div class="product-img">
-											<img src="./img/product02.png" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-name"><a href="#">product name goes here</a></h3>
-											<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-										</div>
-										<button class="delete"><i class="fa fa-close"></i></button>
-									</div>
-								</div>
-								<div class="cart-summary">
-									<small>3 Item(s) selected</small>
-									<h5>SUBTOTAL: $2940.00</h5>
-								</div>
-								<div class="cart-btns">
-									<a href="#">View Cart</a>
-									<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<!-- /Cart -->
-
-						<!-- Menu Toogle -->
-						<div class="menu-toggle">
-							<a href="#">
-								<i class="fa fa-bars"></i>
-								<span>Menu</span>
-							</a>
-						</div>
-						<!-- /Menu Toogle -->
-					</div>
-				</div>
-				<!-- /ACCOUNT -->
+	<header>
+		<!-- TOP HEADER -->
+		<div id="top-header">
+			<div class="container">
+				<ul class="header-links pull-left">
+					<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
+					<li><a href="#"><i class="far fa-envelope"></i> laptopck@cklaptop.com.vn</a></li>
+					<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, TpHCM</a></li>
+				</ul>
+				<ul class="header-links pull-right">
+					<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
+					<li><a href="./login/SignIn.html"><i class="far fa-user"></i>Đăng nhập</a></li>
+					<li><a href="./login/SignUp.html"><i class="fas fa-plus"></i>Đăng ký</a></li>
+				</ul>
 			</div>
-			<!-- row -->
 		</div>
+		<!-- /TOP HEADER -->
+
+		<!-- MAIN HEADER -->
+		<div id="header">
+			<!-- container -->
+			<div class="container">
+				<!-- row -->
+				<div class="row">
+					<!-- LOGO -->
+					<div class="col-md-3">
+						<div class="header-logo">
+							<a href="#" class="logo">
+								<img width = "80%" src="./img/logo.png" alt="">
+							</a>
+						</div>
+					</div>
+					<!-- /LOGO -->
+
+					<!-- SEARCH BAR -->
+					<div class="col-md-6">
+						<div class="header-search">
+							<form>
+								<select class="input-select">
+									<option value="0">Tất cả</option>
+									<option value="1">Gaming</option>
+									<option value="2">Văn phòng</option>
+									<option value="3">Doanh nhân</option>
+									<option value="4">Ultrabook</option>
+									<option value="5">Dell</option>
+									<option value="6">Asus</option>
+									<option value="7">MSI</option>
+									<option value="8">Apple</option>
+								</select>
+								<input class="input" placeholder="Bạn đang tìm sản phẩm nào?">
+								<button class="search-btn">Tìm kiếm</button>
+							</form>
+						</div>
+					</div>
+					<!-- /SEARCH BAR -->
+
+					<!-- ACCOUNT -->
+					<div class="col-md-3 clearfix">
+						<div class="header-ctn">
+							<!-- Wishlist -->
+							<div>
+								<a href="#">
+									<i class="far fa-heart"></i>
+									<span>Yêu thích</span>
+									<div class="qty">0</div>
+								</a>
+							</div>
+							<!-- /Wishlist -->
+
+							<!-- Cart -->
+							<div class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+									<i class="fa fa-shopping-cart"></i>
+									<span>Giỏ hàng</span>
+									<div class="qty">0</div>
+								</a>
+								<!-- <div class="cart-dropdown">
+									<div class="cart-list">
+										<div class="product-widget">
+											<div class="product-img">
+												<img src="./img/product01.png" alt="">
+											</div>
+											<div class="product-body">
+												<h3 class="product-name"><a href="#">product name goes here</a></h3>
+												<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
+											</div>
+											<button class="delete"><i class="fa fa-close"></i></button>
+										</div>
+
+										<div class="product-widget">
+											<div class="product-img">
+												<img src="./img/product02.png" alt="">
+											</div>
+											<div class="product-body">
+												<h3 class="product-name"><a href="#">product name goes here</a></h3>
+												<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
+											</div>
+											<button class="delete"><i class="fa fa-close"></i></button>
+										</div>
+									</div>
+									<div class="cart-summary">
+										<small>3 Item(s) selected</small>
+										<h5>SUBTOTAL: $2940.00</h5>
+									</div>
+									<div class="cart-btns">
+										<a href="#">View Cart</a>
+										<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+									</div>
+								</div> -->
+							</div>
+							<!-- /Cart -->
+
+							<!-- Menu Toogle -->
+							<div class="menu-toggle">
+								<a href="#">
+									<i class="fa fa-bars"></i>
+									<span>Menu</span>
+								</a>
+							</div>
+							<!-- /Menu Toogle -->
+						</div>
+					</div>
+					<!-- /ACCOUNT -->
+				</div>
+				<!-- row -->
+			</div>
+			<!-- container -->
+		</div>
+		<!-- /MAIN HEADER -->
+	</header>
+	<!-- /HEADER -->
+
+	<!-- NAVIGATION -->
+	<nav id="navigation">
 		<!-- container -->
-	</div>
-	<!-- /MAIN HEADER -->
-</header>
-<!-- /HEADER -->
-
-<!-- NAVIGATION -->
-<nav id="navigation">
-	<!-- container -->
-	<div class="container">
-		<!-- responsive-nav -->
-		<div id="responsive-nav">
-			<!-- NAV -->
-			<ul class="main-nav nav navbar-nav">
-				<li class="active"><a href="../../index.html">Home</a></li>
-				<li><a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
-				<li><a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
-				<li><a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
-				<li><a href="../../type/Laptop_UltraBook.html">Ultra Book</a></li>
-				<li><a href="../../producer/Laptop_Dell.html">DELL</a></li>
-				<li><a href="../../producer/Laptop_Asus.html">ASUS</a></li>
-				<li><a href="../../producer/Laptop_MSI.html">MSI</a></li>
-				<li><a href="../../producer/Laptop_MacBook.html">APPLE</a></li>
-			</ul>
-			<!-- /NAV -->
+		<div class="container">
+			<!-- responsive-nav -->
+			<div id="responsive-nav">
+				<!-- NAV -->
+				<ul class="main-nav nav navbar-nav">
+					<li class="active"><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
+					
+					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
+						<div class="dropdown-content">
+							<a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a>
+							<a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a>
+							<a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a>
+							<a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a>
+						</div>
+					</li>
+					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
+						<div class="dropdown-content">
+							<a href="./producer/Laptop_Dell.html">DELL</a>
+							<a href="./producer/Laptop_Asus.html">ASUS</a>
+							<a href="./producer/Laptop_MSI.html">MSI</a>
+							<a href="./producer/Laptop_MacBook.html">APPLE</a>
+						</div>
+					</li>
+				</ul>
+				<!-- /NAV -->
+			</div>
+			<!-- /responsive-nav -->
 		</div>
-		<!-- /responsive-nav -->
-	</div>
-	<!-- /container -->
-</nav>
-<!-- /NAVIGATION -->
+		<!-- /container -->
+	</nav>
+	<!-- /NAVIGATION -->
 
-
-<!-- END OF HEADER -->
 
 
 		<!-- BREADCRUMB -->
