update footer msi_GP62MVR

--- a/detail/msi/msi_GP62MVR.html
+++ b/detail/msi/msi_GP62MVR.html
@@ -1021,96 +1021,93 @@
 		<!-- /Section -->
 		
 <!-- FOOTER -->
-<footer id="footer">
-	<!-- top footer -->
-	<div class="section">
-		<!-- container -->
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<div class="col-md-3 col-xs-6">
-					<div class="footer">
-						<h3 class="footer-title">Về chúng tôi</h3>
-						<p>Môn Lập trình ứng dụng Web - khoa Công nghệ Thông tin, trường Đại học Khoa học Tự nhiên - Đại học Quốc gia Tp. Hồ Chí Minh</p>
-						<ul class="footer-links">
-							<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
-							<li><a href="#"><i class="fa fa-envelope-o"></i> laptopck@cklaptop.com.vn</a></li>
-							<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, Tp. HCM</a></li>
-						</ul>
-					</div>
-				</div>
+		<footer id="footer">
+			<!-- top footer -->
+			<div class="section">
+				<!-- container -->
+				<div class="container">
+					<!-- row -->
+					<div class="row">
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Về chúng tôi</h3>
+								<p>Môn Lập trình ứng dụng Web - khoa Công nghệ Thông tin, trường Đại học Khoa học Tự nhiên - Đại học Quốc gia Tp. Hồ Chí Minh</p>
+								<ul class="footer-links">
+									<li><a href="#"><i class="fa fa-phone"></i> 0989 871 786</a></li>
+									<li><a href="#"><i class="far fa-envelope"></i> laptopck@cklaptop.com.vn</a></li>
+									<li><a href="#"><i class="fa fa-map-marker"></i> 227 Nguyễn Văn Cừ, phường 4, quận 5, Tp. HCM</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Thông tin thành viên</h3>
+								<ul class="footer-links">
+									<li>1512576 - Nguyễn Quang Tính</li>
+									<li>1512609 - Hoàng Quốc Trung</li>
+									<li>1512613 - Nguyễn Chí Trung</li>
+									<li>1512651 - Bùi Châu Minh Tùng</li>
+								</ul>
+							</div>
+						</div>
+						
+						<div class="clearfix visible-xs"></div>
 
-				<div class="col-md-3 col-xs-6">
-					<div class="footer">
-						<h3 class="footer-title">Các thương hiệu được phân phối</h3>
-						<ul class="footer-links">
-							<li><a href="#">DELL</a></li>
-							<li><a href="#">ASUS</a></li>
-							<li><a href="#">MSI</a></li>
-							<li><a href="#">APPLE</a></li>
-						</ul>
-					</div>
-				</div>
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Tìm kiếm nhanh</h3>
+								<ul class="footer-links">
+									<li><a href="./producer/Laptop_Dell.html">DELL</a></li>
+									<li><a href="./producer/Laptop_Asus.html">ASUS</a></li>
+									<li><a href="./producer/Laptop_MSI.html">MSI</a></li>
+									<li><a href="./producer/Laptop_MacBook.html">APPLE</a></li>
+									<li><a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+									<li><a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+									<li><a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+									<li><a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a></li>
+								</ul>
+							</div>
+						</div>
 
-				<div class="clearfix visible-xs"></div>
+						
 
-				<div class="col-md-3 col-xs-6">
-					<div class="footer">
-						<h3 class="footer-title">Thông tin thành viên</h3>
-						<ul class="footer-links">
-							<li>1512576 - Nguyễn Quang Tính</li>
-							<li>1512609 - Hoàng Quốc Trung</li>
-							<li>1512613 - Nguyễn Chí Trung</li>
-							<li>1512651 - Bùi Châu Minh Tùng</li>
-						</ul>
+						<div class="col-md-3 col-xs-6">
+							<div class="footer">
+								<h3 class="footer-title">Dịch vụ</h3>
+								<ul class="footer-links">
+									<li><a href="#">Tài khoản của tôi</a></li>
+									<li><a href="#">Xem giỏ hàng</a></li>
+									<li><a href="#">Về đầu trang</a></li>
+									<li><a href="#">Đến trang hệ thống</a></li>
+								</ul>
+							</div>
+						</div>
 					</div>
+					<!-- /row -->
 				</div>
-
-				<div class="col-md-3 col-xs-6">
-					<div class="footer">
-						<h3 class="footer-title">Dịch vụ</h3>
-						<ul class="footer-links">
-							<li><a href="#">Tài khoản của tôi</a></li>
-							<li><a href="#">Xem giỏ hàng</a></li>
-							<li><a href="#">Về đầu trang</a></li>
-						</ul>
-					</div>
-				</div>
+				<!-- /container -->
 			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /top footer -->
+			<!-- /top footer -->
 
-	<!-- bottom footer -->
-	<div id="bottom-footer" class="section">
-		<div class="container">
-			<!-- row -->
-			<div class="row">
-				<div class="col-md-12 text-center">
-					<ul class="footer-payments">
-						<li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-						<li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-						<li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-						<li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-						<li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-						<li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
-					</ul>
-					<span class="copyright">
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by NCT
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					</span>
+			<!-- bottom footer -->
+			<div id="bottom-footer" class="section">
+				<div class="container">
+					<!-- row -->
+					<div class="row">
+						<div class="col-md-12 text-center">
+							<span class="copyright">
+								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by NCT
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							</span>
+						</div>
+					</div>
+					<!-- /row -->
 				</div>
+				<!-- /container -->
 			</div>
-			<!-- /row -->
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /bottom footer -->
-</footer>
-<!-- /FOOTER -->
+			<!-- /bottom footer -->
+		</footer>
+		<!-- /FOOTER -->
 
 
 		<!-- jQuery Plugins -->
