--- a/detail/msi/msi_GP62M-1497.html
+++ b/detail/msi/msi_GP62M-1497.html
@@ -189,7 +189,7 @@
 			<div id="responsive-nav">
 				<!-- NAV -->
 				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
+					<li class="active"><a href="../../index.html"><i class="fas fa-home"></i> Trang chủ</a></li>
 					
 					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
 						<div class="dropdown-content">
