update link header

--- a/detail/apple/mac_MPXU2LL.html
+++ b/detail/apple/mac_MPXU2LL.html
@@ -187,27 +187,26 @@
 			<!-- responsive-nav -->
 			<div id="responsive-nav">
 				<!-- NAV -->
-				<ul class="main-nav nav navbar-nav">
+<ul class="main-nav nav navbar-nav">
 					<li class="active"><a href="../../index.html"><i class="fas fa-home"></i> Trang chủ</a></li>
 					
 					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
 						<div class="dropdown-content">
-							<a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a>
-							<a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a>
-							<a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a>
-							<a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a>
+							<a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a>
+							<a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a>
+							<a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a>
+							<a href="../../type/Laptop_UltraBook.html">Laptop UltraBook</a>
 						</div>
 					</li>
 					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
 						<div class="dropdown-content">
-							<a href="./producer/Laptop_Dell.html">DELL</a>
-							<a href="./producer/Laptop_Asus.html">ASUS</a>
-							<a href="./producer/Laptop_MSI.html">MSI</a>
-							<a href="./producer/Laptop_MacBook.html">APPLE</a>
+							<a href="../../producer/Laptop_Dell.html">DELL</a>
+							<a href="../../producer/Laptop_Asus.html">ASUS</a>
+							<a href="../../producer/Laptop_MSI.html">MSI</a>
+							<a href="../../producer/Laptop_MacBook.html">APPLE</a>
 						</div>
 					</li>
-				</ul>
-				<!-- /NAV -->
+				</ul>				<!-- /NAV -->
 			</div>
 			<!-- /responsive-nav -->
 		</div>
