--- a/detail/apple/mac_MPXW2ZP.html
+++ b/detail/apple/mac_MPXW2ZP.html
@@ -191,18 +191,18 @@
 					
 					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
 						<div class="dropdown-content">
-							<a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a>
-							<a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a>
-							<a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a>
-							<a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a>
+							<a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a>
+							<a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a>
+							<a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a>
+							<a href="../../type/Laptop_UltraBook.html">Laptop UltraBook</a>
 						</div>
 					</li>
 					<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
 						<div class="dropdown-content">
-							<a href="./producer/Laptop_Dell.html">DELL</a>
-							<a href="./producer/Laptop_Asus.html">ASUS</a>
-							<a href="./producer/Laptop_MSI.html">MSI</a>
-							<a href="./producer/Laptop_MacBook.html">APPLE</a>
+							<a href="../../producer/Laptop_Dell.html">DELL</a>
+							<a href="../../producer/Laptop_Asus.html">ASUS</a>
+							<a href="../../producer/Laptop_MSI.html">MSI</a>
+							<a href="../../producer/Laptop_MacBook.html">APPLE</a>
 						</div>
 					</li>
 				</ul>
