--- a/detail/msi/msi_GV62.html
+++ b/detail/msi/msi_GV62.html
@@ -340,8 +340,9 @@
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
-								<li><a href="#">Laptop Gaming</a></li>
-								<li><a href="#">Laptop MSI</a></li>
+								<li><a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+								<li><a href="../../producer/Laptop_MSI.html">Laptop MSI</a></li>
+
 							</ul>
 
 							<ul class="product-links">
@@ -1055,14 +1056,14 @@
 							<div class="footer">
 								<h3 class="footer-title">Tìm kiếm nhanh</h3>
 								<ul class="footer-links">
-									<li><a href="./producer/Laptop_Dell.html">DELL</a></li>
-									<li><a href="./producer/Laptop_Asus.html">ASUS</a></li>
-									<li><a href="./producer/Laptop_MSI.html">MSI</a></li>
-									<li><a href="./producer/Laptop_MacBook.html">APPLE</a></li>
-									<li><a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
-									<li><a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
-									<li><a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
-									<li><a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a></li>
+									<li><a href="../../producer/Laptop_Dell.html">DELL</a></li>
+									<li><a href="../../producer/Laptop_Asus.html">ASUS</a></li>
+									<li><a href="../../producer/Laptop_MSI.html">MSI</a></li>
+									<li><a href="../../producer/Laptop_MacBook.html">APPLE</a></li>
+									<li><a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+									<li><a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+									<li><a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+									<li><a href="../../type/Laptop_UltraBook.html">Laptop UltraBook</a></li>
 								</ul>
 							</div>
 						</div>
@@ -1073,7 +1074,7 @@
 							<div class="footer">
 								<h3 class="footer-title">Dịch vụ</h3>
 								<ul class="footer-links">
-									<li><a href="#">Tài khoản của tôi</a></li>
+									<li><a href="../../user/updateinfo.html">Tài khoản của tôi</a></li>
 									<li><a href="#">Xem giỏ hàng</a></li>
 									<li><a href="#">Về đầu trang</a></li>
 									<li><a href="#">Đến trang hệ thống</a></li>
