--- a/detail/apple/mac_MNYM2SA.html
+++ b/detail/apple/mac_MNYM2SA.html
@@ -59,8 +59,8 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<li><a href="#"><i class="fa fa-dollar"></i> VNĐ</a></li>
-					<li><a href="./login/SignIn.html"><i class="far fa-user"></i>Đăng nhập</a></li>
-					<li><a href="./login/SignUp.html"><i class="fas fa-plus"></i>Đăng ký</a></li>
+					<li><a href="../../login/SignIn.html"><i class="far fa-user"></i>Đăng nhập</a></li>
+					<li><a href="../../login/SignUp.html"><i class="fas fa-plus"></i>Đăng ký</a></li>
 				</ul>
 			</div>
 		</div>
@@ -339,9 +339,8 @@
 							</div>
 							<ul class="product-links">
 								<li>Danh mục:</li>
-								<li><a href="#">Macbook</a></li>
-								<li><a href="#">Laptop Doanh nhân</a></li>
-								<li><a href="#">Ultrabook</a></li>
+								<li><a href="../../producer/Laptop_MacBook.html">Macbook</a></li>
+								<li><a href="../../type/Laptop_UltraBook.html">Ultrabook</a></li>
 							</ul>
 
 							<ul class="product-links">
@@ -1047,14 +1046,14 @@
 							<div class="footer">
 								<h3 class="footer-title">Tìm kiếm nhanh</h3>
 								<ul class="footer-links">
-									<li><a href="./producer/Laptop_Dell.html">DELL</a></li>
-									<li><a href="./producer/Laptop_Asus.html">ASUS</a></li>
-									<li><a href="./producer/Laptop_MSI.html">MSI</a></li>
-									<li><a href="./producer/Laptop_MacBook.html">APPLE</a></li>
-									<li><a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
-									<li><a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
-									<li><a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
-									<li><a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a></li>
+									<li><a href="../../producer/Laptop_Dell.html">DELL</a></li>
+									<li><a href="../../producer/Laptop_Asus.html">ASUS</a></li>
+									<li><a href="../../producer/Laptop_MSI.html">MSI</a></li>
+									<li><a href="../../producer/Laptop_MacBook.html">APPLE</a></li>
+									<li><a href="../../type/Laptop_ChoiGame.html">Laptop Gaming</a></li>
+									<li><a href="../../type/Laptop_VanPhong.html">Laptop Văn phòng</a></li>
+									<li><a href="../../type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a></li>
+									<li><a href="../../type/Laptop_UltraBook.html">Laptop UltraBook</a></li>
 								</ul>
 							</div>
 						</div>
