Update header footer asus 2

--- a/detail/dell/Dell Inspiron 14 3467-M20NR21.html
+++ b/detail/dell/Dell Inspiron 14 3467-M20NR21.html
@@ -231,7 +231,7 @@
 					<!-- Product details -->
 					<div class="col-md-5">
 						<div class="product-details">
-							<h2 class="product-name">Máy xách tay/ Laptop DELL VOSTRO 3568-VTI35037 (BLACK)
+							<h2 class="product-name">Máy xách tay/ Laptop DELL INSPIRON 14 3467-M20NR21 (BLACK)
 </h2>
 							<div>
 								<div class="product-rating">
